--- a/app/src/main/res/menu/save_menu.xml
+++ b/app/src/main/res/menu/save_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/camera_btn"
+        android:icon="@drawable/ic_camera"
+        android:title=""
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/save_btn"
         android:icon="@drawable/save"
         android:title=""
